2007-12-26  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Allocate bitfield in Peer when it is really used. More specifically,
	bitfield in Peer is allocated after the connection is established and
	deallocated when the connection is dropped.
	Since 2 parameters(piece length and total length) was removed from the
	constructor of Peer class, many test classes were modified accordingly.
	See svn log for more detailed information.
	* src/PeerInteractionCommand.cc
	* src/CompactPeerListProcessor.cc
	* src/Peer.cc
	* src/DefaultPeerListProcessor.cc
	* src/PeerListenCommand.cc
	* src/PeerReceiveHandshakeCommand.cc

	Fixed memory leak
	* src/Piece.cc

2007-12-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed the default value of PREF_PEER_CONNECTION_TIMEOUT and
	lowestSpeedLimit in ActivePeerConnectionCommand. TODO: Make them
	command-line options.
	* src/option_processing.cc
	* src/ActivePeerConnectionCommand.cc

2007-12-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Send have message to peer if it already has the piece.
	* src/BtHaveMessage.{h, cc}

2007-12-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed incomingPeer. Set 0 to peer's port if it is not a listening
	port.
	* src/DefaultPeerStorage.{h, cc}
	* test/DefaultPeerStorageTest.cc
	* src/HandshakeExtensionMessage.cc
	* test/HandshakeExtensionMessageTest.cc
	* src/Peer.{h, cc}: Added ipaddr and port to identity comparison.
	* src/PeerStorage.h
	* test/MockPeerStorage.h
	* src/PeerListenCommand.cc
	* src/PeerReceiveHandshakeCommand.cc

2007-12-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --metalink-enable-unique-protocol option.
	* src/Metalink2RequestGroup.cc
	* src/option_processing.cc
	* src/prefs.h
	* src/version_usage.cc
	* doc/aria2c.1.txt
	* doc/aria2c.1

2007-12-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Allow a peer in incomingPeer to be added peers.
	* src/DefaultPeerStorage.cc
	* test/DefaultPeerStorageTest.cc
