@@ -1,3 +1,11 @@
+2007-12-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Remove a defunct control file. A defunct control file means that while
+	it exists, but the corresponding download file is missing.
+	After its removal, a download restarts from the beginning.
+	* src/RequestGroup.cc
+	* src/message.h
+
 2007-12-26  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Allocate bitfield in Peer when it is really used. More specifically,
